--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
 .App {
-  text-align: center;
+  max-height: 100vh;
+  background-image: linear-gradient(45deg,#d2001a,#7462ff,#f48e21);
+  background-size: 300% 300%;
+  animation: color 5s ease-in-out infinite;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@keyframes color {
+  0% { background-position: 0 50%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  50%{
+    background-position: 100% 50%;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  100%{
+    background-position: 0 50%;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+}  
