--- a/src/Myform.css
+++ b/src/Myform.css
@@ -14,6 +14,10 @@ h1{
     text-align: center;
 }
 
+label{
+    font-weight: 600;
+    font-size: larger;
+}
 
 .form-control{
     font-size: 16px;
@@ -25,9 +29,10 @@ h1{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 button{
-    margin:30px 10px;
+    margin:40px 10px;
+    margin-left: 80px;
     text-align: center;
-    width: 90%;
+    width: 70%;
     padding: 5px;
     font-size: 20px;
     color: white;
